# sentiment_analysis_bert

Frontend/: index.html  style.css
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/api/: main.py
backend/api/routers/: sentiment.py
backend/api/templates/: index.html  script.js  style.css
backend/api/utils/: utils.py
backend/notebook/: Sentiment_Analysis_BERT.ipynb
