[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "sentencepiece==0.1.99",
    "torch==2.1.2",
    "transformers==4.36.2",
    "uvicorn[standard]==0.27.0",
]
